<resources>
    <string name="app_name">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="select_date">Select date</string>
    <string name="gender">Gender:</string>
    <string name="phone_number">Phone number:</string>
    <string name="address">Address:</string>
    <string name="name">Name:</string>
    <string name="new_contact">New contact</string>
    <string name="contact_details">Contact details</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="contact_added">Contact added!</string>
    <string name="contact_changed">Contact changed!</string>
    <string name="please_fill_all_fields">Please, fill all fields!</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="nothing_to_delete">Nothing to delete!</string>
    <string name="pref">Preference</string>
    <string name="select_male_text_color">Select Male text color</string>
    <string name="select_how_to_show_gender">Select how to show gender selection</string>
    <string name="select_female_text_color">Select Female text color</string>
    <string name="settings">Settings</string>
    <string name="gender_filter">Gender filter</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="select_save_to">Select save to</string>
    <string name="external">External</string>
    <string name="internal">Internal</string>
    <string name="load_from">Load contacts from</string>
    <string name="error_in_loading_xml">Error in loading XML-file:</string>
    <string name="import_contacts_from">Import contacts from</string>
    <string name="export_contacts_to">Export Contacts to</string>
    <string name="no_external_storage_available">No external storage available</string>
    <string name="button_style">Button style</string>
    <string name="select_photo_from">Select photo from</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="imported">"Imported "</string>
    <string name="contacts">" contacts"</string>
    <string name="exported">"Exported "</string>
    <string name="language">Language</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="today_is">"Today is "</string>
    <string name="s_birthday">\'s birthday</string>
    <string-array name="week_day_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wen</item>
        <item>Thu</item>
        <item>Wri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="month_name">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="button_label">
        <item>&#x003c;</item>
        <item>&#x003e;</item>
    </string-array>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="style_array">
        <item>Ligth</item>
        <item>Dark</item>
    </string-array>
    <string-array name="style_values">
        <item>1</item>
        <item>2</item>

    </string-array>
    <string-array name="pref_list_array">
        <item>Male-Female</item>
        <item>Female-Male</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="gender_filter_array">
        <item>Male</item>
        <item>Female</item>
        <item>Male and Female</item>
    </string-array>
    <string-array name="gender_filter_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    gender_filter_array
    <string-array name="pref_colors_array">
        <item>Black</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="pref_colors_values">
        <item>#000000</item>
        <item>#FF0000</item>
        <item>#00FF00</item>
        <item>#0000FF</item>
        <item>#FFFF00</item>
    </string-array>
    <string-array name="locale_array">
        <item>English</item>
        <item>Russian</item>
        <item>Default</item>
    </string-array>
    <string-array name="locale_values">
        <item>en</item>
        <item>ru</item>
        <item>default</item>
    </string-array>
</resources>
